delay modal open to fix modal flicker

--- a/src/components/walletpicker/WalletPicker.module.scss
+++ b/src/components/walletpicker/WalletPicker.module.scss
@@ -33,7 +33,13 @@
     .menu {
       display: flex;
       flex-direction: row;
+      align-items: center;
+      z-index: 1;
       position: relative;
+      @include mobile {
+        width: 100%;
+        justify-content: space-between;
+      }
       a {
         cursor: pointer;
       }
